# DriveDock

./: .gitignore  BUILDING.md  CLAUDE.md  Cargo.toml  README.md  build-flatpak.sh  flake.nix  org.example.DriveDock.yml  setup-dev.sh
.claude/: settings.json
.github/: copilot-instructions.md
.github/docs/subagent_docs/: ANALYSIS_ARCH.md  ANALYSIS_BUGS.md  ANALYSIS_FEATURES.md  MASTER_PLAN.md  network-mount-privileged_review.md  network-mount-privileged_review_final.md  network-mount-privileged_spec.md  nix-pivot-scope-narrow_review.md  nix-pivot-scope-narrow_spec.md
data/polkit/: org.example.DriveDock.mount-helper.policy.in
docs/: BUILDING.md  PROJECT_STATUS.md
nix/: module.nix  package.nix  shell.nix
scripts/: preflight.sh
src/: main.rs  udisks.rs
src/dock/: fstab.rs  mod.rs  nixos.rs  shares.rs
src/network/: discover.rs  gvfs.rs  mod.rs  mount.rs  nfs.rs  smb.rs
src/system/: local.rs  mod.rs  unmount.rs
src/ui/: mod.rs  window.rs
